Fix product pages card strong font-weight and nav vertical alignment

--- a/assets/less/roadmaps/index.less
+++ b/assets/less/roadmaps/index.less
@@ -77,6 +77,10 @@ body {
     flex-direction: column;
 }
 
+.tab-navigation-links {
+    max-width: 76rem;
+}
+
 .site-nav {
     // From home.less
     color: var(--nav-txt);
@@ -86,6 +90,12 @@ body {
     --hamburger-background-active: var(--color-white);
     --hamburger-foreground-active: var(--color-black);
     background-color: rgba(0, 0, 0, 0.8);
+    padding-inline: 0;
+
+    .nav-container {
+        max-width: 76rem;
+        padding-inline: 1rem;
+    }
 
     // From 2025-fonts.less
     .nav-links .nav-ln {
@@ -414,7 +424,6 @@ main {
 
     @media (min-width: @tablet-breakpoint) {
         padding-top: 2.25rem;
-        padding-inline: 2rem;
     }
 
     // Page heading
@@ -488,7 +497,7 @@ main {
         display: grid;
         grid-template-rows: auto 1fr auto;
         column-gap: 0.75rem;
-        row-gap: 0.25rem;
+        row-gap: 0.5rem;
 
         box-sizing: border-box;
         min-height: 10.563rem;
@@ -499,7 +508,6 @@ main {
 
         @media (min-width: @tablet-breakpoint) {
             column-gap: 1rem;
-            row-gap: 0.5rem;
             padding-inline: 1rem;
             padding-block: 1rem 1.5rem;
             min-height: 250px;
@@ -516,6 +524,11 @@ main {
                 // Override per Design Team
                 line-height: normal;
             }
+        }
+
+        strong {
+            font-weight: 600;
+            font-size: 1rem;
         }
 
         // Additional styles for the Bolt web-components
